# gorbagana-battleships

./: .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT.md  ENHANCED_FEATURES.md  FIXES_APPLIED.md  LANDING_PAGE_AUDIT.md  README.md  REBUILD_COMPLETE.md  deploy.sh  package.json  render.yaml  server.js  start-dev.ps1  start-servers.ps1  test-production.ps1  tsconfig.json
backend/: env-sample.txt  package.json  server.js  setup-database.js
backend/config/: config.js  database.js
backend/models/: Game.js
frontend/: next.config.js  package.json  tailwind.config.js
frontend/src/app/: battleship-game.tsx  globals.css  layout.tsx  page.tsx
frontend/src/components/: BattleshipGame.tsx  GameBoard.tsx  GorbaganaFaucet.tsx  GorbaganaInfo.tsx  LandingPage.tsx  PublicGamesLobby.tsx  WalletBalance.tsx  WalletProvider.tsx
frontend/src/lib/: battleshipUtils.ts  config.ts  gameStorage.ts  gorbaganaService.ts
programs/battleship/: Cargo.toml
programs/battleship/src/: lib.rs
tests/: battleship.ts
